 - Add program to "relive" simulate original contest submissions.
 - Add option to display favourite teams on top of the public scoreboard.
 - Make format of timestamps in web interfaces configurable.
 - Use PHP multibyte string functions where applicable. Thanks Vladimir
   Vassiliev for the bug report.
 - Use HTML5 for multiple file uploads and form validation, when available.

Version 3.3.0 - 29 May 2012
---------------------------
 - Fix bug: don't show unverified submission details if verification is
   required. Thanks Keith Johnson.
 - Add sourcefiles_limit setting, upper bound on the number of source
   files in one submission.
 - Improve polishing of multifile submission handling.
 - Preselect original text in clarification form.
 - Remove judgehost from submission overview tables.
 - Calculate team that first solved a problem per sortorder.
 - Do not show submission form when contest has not yet started.
 - Add button to submission list to view only unjudged submissions.
 - Improve performance of checkconfig under large databases.
 - Change runguard kill process to remove unnecessary sleep()s.
 - Create chroot once per judging instead of once per testcase to
   remove overhead of repeated chroot start/stopping.
 - Make chroot bind mounts read-only for extra security.
 - Refresh scoreboard cache only after a warning has been acknowledged.
 - Add advisory locking to calcScoreRow() updating of scoreboard cache,
   to prevent accidental high database load.
 - Check for unfinished judgings on judgehost startup and give
   them back to the queue.
 - Display problem description in submit confirmation dialog.
 - Add configure-variables-interpolated sudoers.d-snippet.
 - Fix JS sorting on id for several tables.
 - Sort problems from the current contest to the top on the problems
   overview page.
 - Add optional judge comment field to judging verification.
 - Redirect to originating page after verification of submission.